--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,15 +26,13 @@ dist.jar=${dist.dir}/MCCasino.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.bukkit-0.0.1-SNAPSHOT.jar=/Applications/NetBeans/bukkit plugins dev/bukkit-0.0.1-SNAPSHOT.jar
-file.reference.Permissions.jar=/Applications/NetBeans/permissions API/Permissions.jar
+file.reference.Bukkit.jar=/Dropbox/NetBeansProjects/APIs/Bukkit/Bukkit.jar
 file.reference.Vault.jar=/Dropbox/NetBeansProjects/APIs/Vault/Vault.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bukkit-0.0.1-SNAPSHOT.jar}:\
-    ${file.reference.Permissions.jar}:\
-    ${file.reference.Vault.jar}
+    ${file.reference.Vault.jar}:\
+    ${file.reference.Bukkit.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +52,6 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.bukkit-0.0.1-SNAPSHOT.jar=/Applications/NetBeans/bukkit plugins dev/bukkitjavadocs.zip
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
