--- a/src/config.yml
+++ b/src/config.yml
@@ -82,3 +82,22 @@ Machines:
       exclude_winner: true
       radius: 15
       
+    #Black: $0$
+    #Dark blue: $1$
+    #Dark green: $2$
+    #Dark aqua: $3$
+    #Dark red: $4$
+    #Dark purple: $5$
+    #Gold: $6$
+    #Gray: $7$
+    #Dark gray: $8$
+    #Blue: $9$
+    #Green: $a$
+    #Aqua: $b$
+    #Red: $c$
+    #Light purple: $d$
+    #Yellow: $e$
+    #White: $f$
+    #$name$ = player's name
+    #$amount$ = amount of items/money won
+    #$item$ = name of item won
